[metadata]
name = ttvs
author = ttvs pipeline developers
author_email = email
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/mehramat/TTVs
project_urls =
    Bug Tracker = https://github.com/mehramat/TTVs/issues
    Source Code = https://github.com/mehramat/TTVs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.8
setup_requires =
    cython
install_requires =
docs



[options.extras_require]
docs =
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme



